[gd_scene load_steps=2 format=3 uid="uid://c4nhvkpg40yic"]

[ext_resource type="Script" path="res://Scripts/TextHandlers/AutocompleteController.gd" id="2_q20rq"]

[node name="AutocompleteTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "OPTION 1"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
self_modulate = Color(0.527083, 0.527083, 0.527083, 1)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 1
text = "OPTION 2"

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
modulate = Color(0.720467, 0.720468, 0.720467, 1)
self_modulate = Color(0.527083, 0.527083, 0.527083, 1)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 1
text = "OPTION 3"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Begin typing command"

[node name="CodeEdit" type="CodeEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Just one line, please."
wrap_mode = 1
code_completion_enabled = true

[node name="AutocompleteController" type="Node" parent="."]
script = ExtResource("2_q20rq")

[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="AutocompleteController" method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="AutocompleteController" method="_on_line_edit_text_submitted"]
